# documind

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml  eval.yml
alembic/: env.py
docs/: architecture.md  deployment.md
infra/docker/: Dockerfile  docker-compose.yml  podman-compose.yml
infra/docker/grafana/provisioning/dashboards/: dashboards.yml  documind.json
infra/docker/prometheus/: alerts.yml  prometheus.yml
infra/k8s/: deployment.yaml
infra/terraform/: elasticache.tf  main.tf  rds.tf
infra/terraform/gcp/: .terraform.lock.hcl  cloudsql.tf  main.tf  memorystore.tf  secrets.tf  storage.tf
infra/terraform/gcp/.terraform/: terraform.tfstate
scripts/: fine_tune.py  prepare_dataset.py
src/documind/: __init__.py  config.py  main.py
src/documind/agents/: __init__.py  base.py  compliance.py  orchestrator.py  parser.py  qa.py  reporter.py  summarizer.py
src/documind/api/: __init__.py  dependencies.py  middleware.py  task_store.py
src/documind/api/routes/: analysis.py  documents.py  health.py  results.py
src/documind/db/: base.py  models.py
src/documind/db/repositories/: analysis.py  base.py  document.py
src/documind/models/: __init__.py  schemas.py  state.py
src/documind/monitoring/: __init__.py  logging.py  metrics.py
src/documind/services/: __init__.py  cache.py  database.py  embeddings.py  llm.py  storage.py  vectorstore.py
src/documind/utils/: chunking.py
tests/: conftest.py  test_database_integration.py
tests/eval/: run_evals.py
tests/integration/: test_workflow.py
tests/unit/test_agents/: test_base.py
tests/unit/test_api/: test_endpoints.py
